Add remove board from starred boards

--- a/PlanIt/src/assets/cmps/_BoardIndex.scss
+++ b/PlanIt/src/assets/cmps/_BoardIndex.scss
@@ -4,8 +4,6 @@
     margin-top: 48px;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
 
-
-
     .starred-tittle {
         display: flex;
         gap: 10px;
@@ -48,6 +46,11 @@
                     background-color: #E9F2FF;
                     color: #0C66E4;
                 }
+
+                &:hover {
+                    cursor: pointer;
+                    background-color: #091E4224;
+                }
             }
         }
 
@@ -64,16 +67,16 @@
                     font-weight: 500;
                 }
             }
-
         }
 
         .lower-manu {
-            padding: 5px 0px 12px;
+            padding: 12px 0px 12px;
 
             .workspace-title {
                 padding-left: 12px;
                 height: 32px;
                 font-size: 12px;
+                font-weight: 500;
             }
 
             .Planit-workspace-title {
@@ -117,7 +120,7 @@
     .board-list-container {
         margin: 40px 16px 0;
 
-        .starred-tittle {
+        .workspace-title {
             h3 {
                 margin: 0;
             }
