--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -15,6 +15,7 @@
 @import './cmps/AddTask.scss';
 @import './cmps/GroupMenu.scss';
 @import './cmps/MenuHeader.scss';
+@import './cmps/ColorPicker.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
