--- a/PlanIt/src/assets/cmps/_BoardIndex.scss
+++ b/PlanIt/src/assets/cmps/_BoardIndex.scss
@@ -3,6 +3,7 @@
     grid-template-columns: $layoutPadding*4.2 292px 1fr $layoutPadding*4.2;
     margin-top: 48px;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+    color: #172b4d;
 
     .starred-tittle {
         display: flex;
@@ -28,6 +29,11 @@
         color: #172b4d;
         max-width: 290px;
 
+        a {
+            text-decoration: none;
+            color: #172b4d;
+        }
+
         svg {
             height: 16px;
             width: 16px;
@@ -39,6 +45,7 @@
             list-style-type: none;
 
             li {
+                display: flex;
                 border-radius: 8px;
                 padding: 6px 8px;
 
@@ -71,6 +78,12 @@
 
         .lower-manu {
             padding: 12px 0px 12px;
+
+            li {
+                padding: 6px 8px 6px 40px;
+
+
+            }
 
             .workspace-title {
                 padding-left: 12px;
@@ -121,17 +134,20 @@
         margin: 40px 16px 0;
 
         .workspace-title {
-            h3 {
-                margin: 0;
-            }
+            display: flex;
 
             svg {
-                width: 24px;
-                height: 24px;
-                align-items: center;
+                align-self: center;
+                width: 20px;
+                height: 20px;
+                margin: 0 20px 0 5px;
+            }
+
+            h3 {
+                font-size: 16px;
+                margin: 0;
             }
         }
-
 
         ul {
             display: grid;
@@ -179,8 +195,6 @@
                         }
                     }
                 }
-
-
 
                 article {
                     a {
