--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -16,6 +16,7 @@
 @import './cmps/GroupMenu.scss';
 @import './cmps/MenuHeader.scss';
 @import './cmps/ColorPicker.scss';
+@import './cmps/Map.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
