--- a/PlanIt/src/assets/cmps/_Home-page.scss
+++ b/PlanIt/src/assets/cmps/_Home-page.scss
@@ -1,199 +1,249 @@
 .homepage {
-    display: grid;
-    grid-template-columns: $layoutPadding 1fr $layoutPadding;
+  display: grid;
+  grid-template-columns: $layoutPadding 1fr $layoutPadding;
 
-    .homepage-container {
-        grid-column: 1/-1;
-        background:
-            url(https://images.ctfassets.net/rz1oowkt5gyp/7lTGeXbBRNRLaVk2MdBjtJ/99c266ed4cb8cc63bd0c388071f01ff6/white-wave-bg.svg) center bottom -0.5px / 100% 14% no-repeat scroll padding-box border-box, linear-gradient(60deg, rgb(82, 67, 170), rgb(237, 80, 180)) 0% 0% / auto repeat scroll padding-box border-box rgb(82, 67, 170);
-        height: 705.2px;
+  .homepage-container {
+    grid-column: 1/-1;
+    background: url(https://images.ctfassets.net/rz1oowkt5gyp/7lTGeXbBRNRLaVk2MdBjtJ/99c266ed4cb8cc63bd0c388071f01ff6/white-wave-bg.svg)
+        center bottom -0.5px / 100% 14% no-repeat scroll padding-box border-box,
+      linear-gradient(60deg, rgb(82, 67, 170), rgb(237, 80, 180)) 0% 0% / auto
+        repeat scroll padding-box border-box rgb(82, 67, 170);
+    height: 705.2px;
 
-        .main-prev {
-            display: flex;
-            justify-content: center;
-            margin: 0px 50px 0px 50px;
-            gap: 10px;
+    .main-prev {
+      display: flex;
+      justify-content: center;
+      margin: 0px 50px 0px 50px;
+      gap: 10px;
 
-            .conversation-img {
-                padding-top: 3rem;
-                justify-self: end;
-                width: rem(650px);
-            }
+      .conversation-img {
+        padding-top: 3rem;
+        justify-self: end;
+        width: rem(650px);
+      }
 
-            .intro {
-                padding: 128px 16px 128px 16px;
-                text-align: left;
-                max-width: 635px;
+      .intro {
+        padding: 128px 16px 128px 16px;
+        text-align: left;
+        max-width: 635px;
 
-                h1 {
-                    font-size: 3rem;
-                    margin-block-end: rem(8px);
-                    line-height: 1.25;
-                    font-weight: 500;
-                    color: $secondary-color;
-                }
-
-                p {
-                    color: $secondary-color;
-                }
-
-                form {
-                    display: flex;
-                    gap: 1rem;
-
-                    input {
-                        font-size: 1rem;
-                        padding: 0.7rem 0.75rem 0.8rem;
-                        border-radius: 0.3rem;
-                        border: 1px solid rgb(223, 225, 230);
-
-                        &:focus {
-                            outline: none;
-                        }
-                    }
-
-                    button {
-                        align-items: center;
-                        padding: 0.7rem 1rem 0.8rem;
-
-                        text-align: center;
-                        text-decoration: none;
-
-                        background-color: $btn-color;
-                        color: $secondary-color;
-
-                        border: 1px solid $btn-color;
-                        border-radius: 0.3rem;
-                        font-size: 1rem;
-                        transition: 250ms ease-out;
-
-                        &:hover {
-                            cursor: pointer;
-                            background-color: $btn-hover-color;
-                            border-color: $btn-hover-color;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    .productivity-container {
-        grid-column: 1/-1;
-        display: grid;
-        justify-items: center;
-        grid-template-columns: $layoutPadding*2 1fr $layoutPadding*2;
-        grid-template-rows: 1fr 3fr;
-        background: linear-gradient(0deg, rgb(230, 252, 255),
-                rgb(255, 255, 255)) 0% 0% / auto repeat scroll padding-box border-box rgb(178, 212, 255);
-
-        .productivity-text {
-            width: 482px;
-            grid-column: 2/3;
+        h1 {
+          font-size: 3rem;
+          margin-block-end: rem(8px);
+          line-height: 1.25;
+          font-weight: 500;
+          color: $secondary-color;
         }
 
-        .productivity-slider {
-            display: flex;
-            grid-column: 2/3;
-            grid-row: 2/3;
-            gap: 20px;
-
-            .cards {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                width: 287px;
-
-                .card {
-                    position: relative;
-                    border: none;
-                    background-color: transparent;
-                    cursor: pointer;
-                    padding: 0rem 1rem 1rem 1.5rem;
-                    text-align: start;
-
-                    &.card-active {
-                        background: white;
-
-                        &:after {
-                            content: "";
-                            position: absolute;
-                            background-color: #00c7e5;
-                            border-radius: .3rem 0px 0px .3rem;
-                            bottom: 0;
-                            left: 0;
-                            top: 0;
-                            width: .5rem;
-                        }
-                    }
-                }
-            }
+        p {
+          color: $secondary-color;
         }
-    }
 
-    .homepage-get-started {
-        grid-column: 1/-1;
-        background: url(https://images.ctfassets.net/rz1oowkt5gyp/6Q4l8SJeMZGSu1m6W9vAjL/1021a10f6940ce44c50d0ffaefec223e/BigSwingFooterHeroGraphic__Left.svg) left center / contain no-repeat scroll padding-box border-box,
-            url(https://images.ctfassets.net/rz1oowkt5gyp/7KsuX6srvRqJVzeAIdIzIb/da1a3319c278d251ecbd078fcffdcd23/BigSwingFooterHeroGraphic__Right.svg) right center / contain no-repeat scroll padding-box border-box,
-            linear-gradient(60deg, rgb(82, 67, 170), rgb(237, 80, 180)) 0% 0% / auto repeat scroll padding-box border-box rgb(82, 67, 170);
-        color: white;
-        height: 282px;
+        form {
+          display: flex;
+          gap: 1rem;
 
-        .sign-up {
-            display: flex;
-            flex-direction: column;
-            padding: 5rem 1rem;
-            justify-content: center;
+          input {
+            font-size: 1rem;
+            padding: 0.7rem 0.75rem 0.8rem;
+            border-radius: 0.3rem;
+            border: 1px solid rgb(223, 225, 230);
+
+            &:focus {
+              outline: none;
+            }
+          }
+
+          button {
             align-items: center;
+            padding: 0.7rem 1rem 0.8rem;
 
-            form {
-                display: flex;
-                gap: 1rem;
+            text-align: center;
+            text-decoration: none;
 
-                input {
-                    font-size: 1rem;
-                    padding: 0.7rem 0.75rem 0.8rem;
-                    border-radius: 0.3rem;
-                    border: 1px solid rgb(223, 225, 230);
+            background-color: $btn-color;
+            color: $secondary-color;
 
-                    &:focus {
-                        outline: none;
-                    }
-                }
+            border: 1px solid $btn-color;
+            border-radius: 0.3rem;
+            font-size: 1rem;
+            transition: 250ms ease-out;
 
-                button {
-                    align-items: center;
-                    padding: 0.7rem 1rem 0.8rem;
-
-                    text-align: center;
-                    text-decoration: none;
-
-                    background-color: $btn-color;
-                    color: $secondary-color;
-
-                    border: 1px solid $btn-color;
-                    border-radius: 0.3rem;
-                    font-size: 1rem;
-                    transition: 250ms ease-out;
-
-                    &:hover {
-                        cursor: pointer;
-                        background-color: $btn-hover-color;
-                        border-color: $btn-hover-color;
-                    }
-                }
+            &:hover {
+              cursor: pointer;
+              background-color: $btn-hover-color;
+              border-color: $btn-hover-color;
             }
+          }
         }
+      }
+    }
+  }
+
+  .productivity-container {
+    grid-column: 1/-1;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: $layoutPadding * 2 1fr $layoutPadding * 2;
+    grid-template-rows: 1fr 3fr;
+    background: linear-gradient(0deg, rgb(230, 252, 255), rgb(255, 255, 255)) 0%
+      0% / auto repeat scroll padding-box border-box rgb(178, 212, 255);
+
+    .productivity-text {
+      width: 482px;
+      grid-column: 2/3;
     }
 
-    .main-footer {
-        grid-column: 1/-1;
-        background-color: rgb(23, 43, 77);
-        height: 215px;
+    .productivity-slider {
+      display: flex;
+      grid-column: 2/3;
+      grid-row: 2/3;
+      gap: 20px;
 
-        .upper-footer {
-            grid-column: 2/3;
-            box-shadow: 0 1px 0 rgba(9, 30, 66, 0.25);
+      .cards {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 287px;
+
+        .card {
+          position: relative;
+          border: none;
+          background-color: transparent;
+          cursor: pointer;
+          padding: 0rem 1rem 1rem 1.5rem;
+          text-align: start;
+
+          &.card-active {
+            background: white;
+
+            &:after {
+              content: "";
+              position: absolute;
+              background-color: #00c7e5;
+              border-radius: 0.3rem 0px 0px 0.3rem;
+              bottom: 0;
+              left: 0;
+              top: 0;
+              width: 0.5rem;
+            }
+          }
         }
+      }
     }
+  }
+
+  .homepage-get-started {
+    grid-column: 1/-1;
+    background: url(https://images.ctfassets.net/rz1oowkt5gyp/6Q4l8SJeMZGSu1m6W9vAjL/1021a10f6940ce44c50d0ffaefec223e/BigSwingFooterHeroGraphic__Left.svg)
+        left center / contain no-repeat scroll padding-box border-box,
+      url(https://images.ctfassets.net/rz1oowkt5gyp/7KsuX6srvRqJVzeAIdIzIb/da1a3319c278d251ecbd078fcffdcd23/BigSwingFooterHeroGraphic__Right.svg)
+        right center / contain no-repeat scroll padding-box border-box,
+      linear-gradient(60deg, rgb(82, 67, 170), rgb(237, 80, 180)) 0% 0% / auto
+        repeat scroll padding-box border-box rgb(82, 67, 170);
+    color: white;
+    height: 282px;
+
+    .sign-up {
+      display: flex;
+      flex-direction: column;
+      padding: 5rem 1rem;
+      justify-content: center;
+      align-items: center;
+
+      form {
+        display: flex;
+        gap: 1rem;
+
+        input {
+          font-size: 1rem;
+          padding: 0.7rem 0.75rem 0.8rem;
+          border-radius: 0.3rem;
+          border: 1px solid rgb(223, 225, 230);
+
+          &:focus {
+            outline: none;
+          }
+        }
+
+        button {
+          align-items: center;
+          padding: 0.7rem 1rem 0.8rem;
+
+          text-align: center;
+          text-decoration: none;
+
+          background-color: $btn-color;
+          color: $secondary-color;
+
+          border: 1px solid $btn-color;
+          border-radius: 0.3rem;
+          font-size: 1rem;
+          transition: 250ms ease-out;
+
+          &:hover {
+            cursor: pointer;
+            background-color: $btn-hover-color;
+            border-color: $btn-hover-color;
+          }
+        }
+      }
+    }
+  }
+
+  .main-footer {
+    grid-column: 1/-1;
+    background-color: rgb(23, 43, 77);
+    height: 215px;
+
+    .upper-footer {
+      grid-column: 2/3;
+      box-shadow: 0 1px 0 rgba(9, 30, 66, 0.25);
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .homepage {
+    grid-template-columns: 1fr;
+    padding: 0;
+  }
+
+  .homepage-container {
+    padding: 0 8px;
+  }
+
+  .main-prev {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .productivity-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+  }
+
+  .productivity-text,
+  .productivity-slider {
+    width: 100%;
+    max-width: none;
+  }
+
+  .homepage-get-started {
+    padding: 3rem 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .homepage-container {
+    padding: 0 4px;
+  }
+
+  .homepage-get-started {
+    padding: 2rem 0.5rem;
+  }
+
+  .main-footer {
+    padding: 0.5rem;
+  }
 }
