--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -17,6 +17,7 @@
 @import './cmps/MenuHeader.scss';
 @import './cmps/ColorPicker.scss';
 @import './cmps/Map.scss';
+@import './cmps/TaskCardModal.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
