Implement Card task modal

--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -17,7 +17,9 @@
 @import './cmps/MenuHeader.scss';
 @import './cmps/ColorPicker.scss';
 @import './cmps/Map.scss';
-@import './cmps/TaskCardModal.scss';
+@import './cmps/CardModal.scss';
+@import './cmps/CardMainCol.scss';
+@import './cmps/CardDetailData.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
