--- a/PlanIt/src/assets/cmps/_BoardList.scss
+++ b/PlanIt/src/assets/cmps/_BoardList.scss
@@ -89,6 +89,7 @@
                         gap: 10px;
 
                         .label {
+                            margin-right: 3px;
                             padding: 4px 8px;
                             font-size: 0.8rem;
                             color: #ffffff;
