--- a/PlanIt/src/assets/cmps/_BoardHeader.scss
+++ b/PlanIt/src/assets/cmps/_BoardHeader.scss
@@ -102,3 +102,19 @@
         align-items: center;
     }
 }
+.members {
+    display: flex;
+    align-items: center;
+}
+
+.member {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff; 
+    text-align: center;
+}
