Add sidebar menu to card task modal

--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -21,6 +21,7 @@
 @import './cmps/CardModal.scss';
 @import './cmps/CardMainCol.scss';
 @import './cmps/CardDetailData.scss';
+@import './cmps/cardSideBar.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
