Implement card popOver positions with style when clicking the sidemenu btn

--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -22,6 +22,7 @@
 @import './cmps/CardMainCol.scss';
 @import './cmps/CardDetailData.scss';
 @import './cmps/cardSideBar.scss';
+@import './cmps/PopOver.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
