--- a/PlanIt/src/assets/cmps/_CardSideBar.scss
+++ b/PlanIt/src/assets/cmps/_CardSideBar.scss
@@ -17,8 +17,9 @@
         display: flex;
         justify-items: center;
         align-items: center;
-        gap: 8px;
         height: 32px;
+        width: 100%;
+        gap: 8px;
         border: none;
         border-radius: 3px;
 
