Remove task.action and task.reducer

--- a/PlanIt/src/assets/cmps/_PopOver.scss
+++ b/PlanIt/src/assets/cmps/_PopOver.scss
@@ -74,23 +74,29 @@
             padding: 0;
 
             li {
+                display: list-item;
+
                 button {
-                    flex: 1;
-
-                    .member {
-                        margin-right: 8px;
-                    }
-
                     display: flex;
                     flex-direction: row;
                     align-items: center;
                     justify-content: flex-start;
+                    border-radius: 3px;
                     width: 100%;
                     height: 40px;
                     margin: 0;
                     padding: 4px 8px 4px 4px;
 
+                    .member {
+                        margin-right: 8px;
+                    }
+
+                    .member-name {
+                        flex: 1;
+                    }
+
                     .remove-user {
+                        display: block;
                         justify-content: right;
                     }
                 }
