--- a/PlanIt/src/assets/cmps/_AddTask.scss
+++ b/PlanIt/src/assets/cmps/_AddTask.scss
@@ -5,7 +5,7 @@
         text-align: left;
         letter-spacing: normal;
         box-shadow: none;
-        background-color: #ebecf0;
+        background: none;
         border: none;
         border-radius: 8px;
         padding: 6px 12px 6px 8px;
