--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -23,6 +23,7 @@
 @import './cmps/CardDetailData.scss';
 @import './cmps/cardSideBar.scss';
 @import './cmps/PopOver.scss';
+@import './cmps/_PopOverCheckList.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
