--- a/PlanIt/src/assets/cmps/_CardMainCol.scss
+++ b/PlanIt/src/assets/cmps/_CardMainCol.scss
@@ -5,6 +5,21 @@
     width: 70%;
     padding: 0 8px 8px 16px;
 
+    .close-btn {
+        position: absolute;
+        top: 16px;
+        right: 16px;
+        background: none;
+        border: none;
+        font-size: 24px;
+        cursor: pointer;
+        color: #333;
+
+        &:hover {
+            color: #000;
+        }
+    }
+
     h3 {
         justify-self: left;
         grid-column: 2/-1;
