--- a/PlanIt/src/assets/cmps/_PopOverCheckList.scss
+++ b/PlanIt/src/assets/cmps/_PopOverCheckList.scss
@@ -27,6 +27,7 @@
             display: flex;
             align-items: center;
             margin-bottom: 10px;
+            margin-top: 48px;
         }
 
         .checklist-items {
@@ -52,25 +53,86 @@
                 flex-grow: 1;
             }
         }
-        // .add-item{
-        //     width: 74px;
-        //     height: 32px;
-        //     font-size: 14px;
-        //     line-height: 20px;
-        //     text-align: center;
-        //     letter-spacing: normal;
-        //     margin: 14px;
-        
-        //     background-color: #0c66e4;
-        //     color: #ffff;
-        
-        //     border-radius: 3px;
-        //     border: none;
-        //     cursor: pointer;
-        
-        //     &:hover {
-        //         background-color: #075cd1;
-        //     }
-        // }
+    }
+    .checkbox-item{
+        cursor: pointer;
+        width: 16px;
+        height: 16px;
+    }
+}
+
+
+.checklists {
+    .checklist {
+        margin-bottom: 15px;
+
+        .checklist-header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .checklist-progress {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+
+            progress {
+                width: 100%;
+                height: 8px;
+                margin-right: 10px;
+                -webkit-appearance: none;
+                appearance: none;
+            }
+
+            progress::-webkit-progress-bar {
+                background-color: #e6e6e6;
+                border-radius: 3px;
+            }
+
+            progress::-webkit-progress-value {
+                background-color: #0079bf;
+                border-radius: 3px;
+            }
+
+            span {
+                font-size: 14px;
+                font-weight: bold;
+            }
+        }
+
+        .checklist-items {
+            list-style: none;
+            padding-left: 0;
+
+            li {
+                display: flex;
+                align-items: center;
+                margin-bottom: 5px;
+
+                input[type="checkbox"] {
+                    margin-right: 10px;
+                }
+            }
+        }
+
+        .checklist-item-adder {
+            display: flex;
+            margin-top: 10px;
+
+            input {
+                flex-grow: 1;
+                margin-right: 5px;
+            }
+
+            button {
+                padding: 5px 10px;
+                background-color: #0079bf;
+                color: white;
+                border: none;
+                border-radius: 3px;
+                cursor: pointer;
+            }
+        }
     }
 }
