--- a/PlanIt/src/assets/cmps/_BoardList.scss
+++ b/PlanIt/src/assets/cmps/_BoardList.scss
@@ -45,29 +45,39 @@
   .board-golders {
     display: flex;
     gap: 16px;
-    overflow-x: auto;
     padding-bottom: 8px;
     flex-wrap: nowrap;
     align-items: flex-start;
     box-sizing: border-box;
+    overflow: hidden;
   }
 
   .group-card {
-    border-radius: 12px;
-    padding: 16px;
-    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
     display: flex;
     flex-direction: column;
-    cursor: pointer;
+    width: 272px;
+    max-height: 100%;
+    border-radius: 12px;
+    padding: 6px 6px 6px 6px;
     background-color: #f4f5f7;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px 0px,
       rgba(9, 30, 66, 0.31) 0px 0px 1px 0px;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 
     .group-header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       margin-bottom: 8px;
+
+      h3 {
+        font-size: 14px;
+        font-weight: 600;
+        margin: 0;
+        color: #172b4d;
+        font-weight: 600;
+      }
     }
 
     .group-title {
@@ -85,7 +95,10 @@
     }
 
     .tasks {
+      max-height: 80vh;
+      overflow-y: auto;
       margin-top: 8px;
+      scrollbar-width: thin;
 
       .task {
         background-color: #ffffff;
