Add some groupMenu style

--- a/PlanIt/src/assets/cmps/_BoardList.scss
+++ b/PlanIt/src/assets/cmps/_BoardList.scss
@@ -21,7 +21,7 @@
 
 .board-card {
   border-radius: 6px;
-  padding: 16px;
+  padding-block-end: 35px;
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
   display: flex;
   flex-direction: column;
@@ -112,7 +112,7 @@
 
         .task-title {
           margin: 0;
-          font-size: 1rem;
+          font-size: 14px;
           color: #333333;
           white-space: nowrap;
           overflow: hidden;
