--- a/PlanIt/src/assets/cmps/_GroupMenu.scss
+++ b/PlanIt/src/assets/cmps/_GroupMenu.scss
@@ -4,12 +4,24 @@
     margin-left: auto;
 
     .menu-btn {
-        background: none;
-        border: none;
-        font-size: 18px;
-        cursor: pointer;
-        padding: 0 8px;
+        width: 32px;
+        height: 32px;
+        font-size: 16px;
+        padding: 8px;
         line-height: 1;
+        border: none;
+        background: none;
+        border-radius: 8px;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #091e4225;
+        }
+
+        img {
+            width: 16px;
+            height: 16px;
+        }
     }
 
     .menu-dropdown {
