--- a/PlanIt/src/assets/setup/_variables.scss
+++ b/PlanIt/src/assets/setup/_variables.scss
@@ -12,6 +12,10 @@ $btn-hover-color: rgb(7, 71, 166);
 
 $box-shadow: 0 1px 0 rgba(9, 30, 66, 0.25);
 
+$group-color: #f4f5f7;
+
+
+
 
 // LAYOUT
 $layoutPadding: 50px;
