--- a/PlanIt/src/assets/cmps/_PopOverCheckList.scss
+++ b/PlanIt/src/assets/cmps/_PopOverCheckList.scss
@@ -44,15 +44,6 @@
                 }
             }
         }
-
-        .checklist-item-adder {
-            display: flex;
-            margin-top: 10px;
-
-            input {
-                flex-grow: 1;
-            }
-        }
     }
     .checkbox-item{
         cursor: pointer;
@@ -99,20 +90,14 @@
                 font-size: 14px;
                 font-weight: bold;
             }
-        }
 
-        .checklist-items {
-            list-style: none;
-            padding-left: 0;
+            .checklist-percent{
+                margin-right: 10px;
+                font-size: 11px;
+                line-height: 10px;
+                text-align: center;
+                color: #44546f;
 
-            li {
-                display: flex;
-                align-items: center;
-                margin-bottom: 5px;
-
-                input[type="checkbox"] {
-                    margin-right: 10px;
-                }
             }
         }
 
@@ -127,11 +112,16 @@
 
             button {
                 padding: 5px 10px;
-                background-color: #0079bf;
+                background-color: $btn-color;
                 color: white;
                 border: none;
                 border-radius: 3px;
                 cursor: pointer;
+
+                &:hover{
+                    background-color: $btn-hover-color;
+
+                }
             }
         }
     }
