Save background color in storage

--- a/PlanIt/src/assets/cmps/_GroupMenu.scss
+++ b/PlanIt/src/assets/cmps/_GroupMenu.scss
@@ -2,6 +2,7 @@
     display: inline-flex;
     align-items: center;
     margin-left: auto;
+    position: relative;
 
     .menu-btn {
         width: 32px;
@@ -26,7 +27,7 @@
 
     .menu-dropdown {
         position: absolute;
-        top: 20px;
+        top: 100%;
         left: 0;
         background-color: white;
         border: 1px solid #ccc;
