Create labels pop over

--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -24,6 +24,7 @@
 @import './cmps/cardSideBar.scss';
 @import './cmps/PopOver.scss';
 @import './cmps/_PopOverCheckList.scss';
+@import './cmps/PopOverLabels.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
