--- a/PlanIt/src/assets/cmps/_BoardHeader.scss
+++ b/PlanIt/src/assets/cmps/_BoardHeader.scss
@@ -117,7 +117,7 @@
     background-color: #ccc;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color: #dbdbdb;
     text-align: center;
     font-size: 14px;
 }
