--- a/PlanIt/src/assets/cmps/_BoardList.scss
+++ b/PlanIt/src/assets/cmps/_BoardList.scss
@@ -58,10 +58,13 @@
     width: 272px;
     max-height: 100%;
     border-radius: 12px;
-    padding: 6px 6px 6px 6px;
+    padding: 6px 8px 6px 6px;
     background-color: #f4f5f7;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px 0px,
       rgba(9, 30, 66, 0.31) 0px 0px 1px 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
     cursor: pointer;
     transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 
@@ -69,14 +72,12 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 8px;
 
       h3 {
         font-size: 14px;
         font-weight: 600;
         margin: 0;
-        color: #172b4d;
-        font-weight: 600;
+        color: #172b4de0;
       }
     }
 
@@ -88,6 +89,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      padding: 6px 8px 6px 12px;
     }
 
     .group-menu {
@@ -102,7 +104,7 @@
 
       .task {
         background-color: #ffffff;
-        border-radius: 4px;
+        border-radius: 8px;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
         padding: 8px;
         margin-bottom: 8px;
