--- a/PlanIt/src/assets/cmps/_CardMainCol.scss
+++ b/PlanIt/src/assets/cmps/_CardMainCol.scss
@@ -75,7 +75,7 @@
 
             .member {
                 cursor: none;
-                color: white;
+                color: #dbdbdb;
                 background-color: rgb(11, 85, 17);
             }
 
@@ -91,7 +91,15 @@
                     outline: none;
                     font-size: 14px;
                     background-color: white;
+                    transition: 0.5s;
+
+                    &:hover {
+                        background-color: #f5f5f5;
+                        cursor: pointer;
+                    }
                 }
+
+
             }
         }
     }
