--- a/PlanIt/src/assets/cmps/_BoardHeader.scss
+++ b/PlanIt/src/assets/cmps/_BoardHeader.scss
@@ -3,15 +3,14 @@
     justify-content: space-between;
     align-items: center;
     background-color: #ffffff;
-    border-bottom: 1px solid #e0e0e0;
     padding: 0 16px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     height: 60px;
     position: fixed;
-    top: 0;
     margin-top: 48px;
     left: 10px;
     width: 100%;
+    inset: 0;
 
     .board-header-left {
         display: flex;
