--- a/PlanIt/src/assets/cmps/_AddGroup.scss
+++ b/PlanIt/src/assets/cmps/_AddGroup.scss
@@ -1,21 +1,24 @@
 .add-group {
     border-radius: 12px;
     padding: 6px 6px 6px 6px;
-    background-color: $group-color;
 
-.add-group-btn {
+
+    .add-group-btn {
+        display: flex;
         flex-direction: column;
-        gap: 10px;
-        border-radius: 12px;
-        padding: 16px;
-        align-items: center;
-        cursor: pointer;
         min-width: 250px;
-        border: none;
+        gap: 10px;
         font-size: 14px;
+        align-items: center;
+        padding: 16px;
+        border-radius: 12px;
+        border: none;
+        background-color: #ffffff3d;
+        ;
+        cursor: pointer;
 
         &:hover {
-            background-color: #d4d4d4;
+            background-color: #ffffff25;
         }
 
         .add-list-text {
