--- a/PlanIt/src/assets/cmps/_BoardHeader.scss
+++ b/PlanIt/src/assets/cmps/_BoardHeader.scss
@@ -1,14 +1,13 @@
 .board-header {
     display: flex;
+    position: relative;
+    height: 56px;
     justify-content: space-between;
     align-items: center;
     background-color: #ffffff;
-    padding: 0 16px;
+    padding: 12px 10px 12px 16px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    height: 60px;
-    position: fixed;
-    margin-top: 48px;
-    left: 10px;
+    inset: 0;
     width: 100%;
     inset: 0;
 
