--- a/PlanIt/src/assets/cmps/_CardDetailData.scss
+++ b/PlanIt/src/assets/cmps/_CardDetailData.scss
@@ -1,30 +1,28 @@
 .card-detail-data {
   margin-top: 8px;
+  margin-left: 20px;
   width: 85%;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto auto;
+  height: 72px;
 
   .card-detail-item {
-    float: left;
-    margin-right: 12px;
+      float: left;
+      margin-right: 12px;
 
-    h3 {
-      margin-block-start: 1em;
-      font-size: 14px;
-      margin: 0 14px 8px 0;
-      justify-self: start;
-    }
-
-    &.labels {
-      .label {
-        margin-right: 3px;
-        padding: 4px 8px;
-        font-size: 0.8rem;
-        color: #ffffff;
-        border-radius: 4px;
-        text-align: center;
+      h3 {
+          margin: 0;
+          font-size: 12px;
+          margin: 0 14px 8px 0;
       }
-    }
+
+      &.labels {
+          .label {
+              margin-right: 3px;
+              padding: 4px 8px;
+              font-size: 0.8rem;
+              color: #ffffff;
+              border-radius: 4px;
+              text-align: center;
+          }
+      }
   }
 }
