Fix add card style

--- a/PlanIt/src/assets/cmps/_AddTask.scss
+++ b/PlanIt/src/assets/cmps/_AddTask.scss
@@ -1,5 +1,4 @@
 .add-task {
-    padding: 8px 8px 0;
 
     .add-a-card-btn {
         display: flex;
@@ -50,10 +49,14 @@
         line-height: 20px;
         text-align: start;
         letter-spacing: normal;
-
+        border: none;
         border-radius: 8px;
         box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px 0px, rgba(9, 30, 66, 0.31) 0px 0px 1px 0px;
         transition: border-color 0.2s ease-in-out;
+
+        &:focus-visible {
+            outline: none;
+        }
     }
 
     .add-card-btn {
