--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -7,6 +7,7 @@
 @import './setup/functions';
 
 //CMPS
+@import './cmps/App.scss';
 @import './cmps/App-header.scss';
 @import './cmps/Home-page.scss';
 @import './cmps/BoardIndex';
