--- a/PlanIt/src/assets/cmps/_BoardList.scss
+++ b/PlanIt/src/assets/cmps/_BoardList.scss
@@ -6,6 +6,10 @@
   overflow: auto;
   flex-direction: column;
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  flex: 1;
+  overflow-x: auto;
+  width: 100%;
+  align-self: stretch;
 
   .board-title {
     width: 100%;
@@ -28,6 +32,7 @@
     flex-wrap: nowrap;
     align-items: flex-start;
     box-sizing: border-box;
+    height: 100%;
   }
 
   .group-card {
@@ -163,14 +168,16 @@
   justify-content: space-between;
   padding: 0 10px;
   margin: 0;
+  height: 100%;
 }
 
 .board-list {
-  display: flex;
+  display: grid;
+  grid-template-rows: auto 1fr;
   position: relative;
   flex-direction: column;
   align-items: flex-start;
-  height: 100vh;
+  height: 100%;
 }
 
 
