--- a/PlanIt/src/assets/cmps/_AddGroup.scss
+++ b/PlanIt/src/assets/cmps/_AddGroup.scss
@@ -38,6 +38,10 @@
         letter-spacing: normal;
 
         border-radius: 3px;
+
+        &:focus-visible {
+            outline: none;
+        }
     }
 
     .add-new-group {
