Implement grid style on card-detail-modal

--- a/PlanIt/src/assets/cmps/_App.scss
+++ b/PlanIt/src/assets/cmps/_App.scss
@@ -3,12 +3,8 @@
     overflow: hidden;
     display: grid;
     grid-template-rows: auto 1fr;
-
 }
 
-.main-layout{
-    overflow: hidden;
-
+.main-layout {
+    overflow-y: auto;
 }
-
-
