--- a/PlanIt/src/assets/cmps/_CardModal.scss
+++ b/PlanIt/src/assets/cmps/_CardModal.scss
@@ -17,12 +17,17 @@
   }
 
   .card-details-modal {
+    display: grid;
+    grid-template-columns: 50px 1fr 192px;
     width: min(768px, 100%);
+    margin-bottom: 20px;
+    padding-bottom: 100px;
     background-color: #f0f0f0;
     border-radius: 8px;
     z-index: 20;
 
     .card-header {
+      grid-column: 1/-1;
       display: flex;
       flex-direction: column;
       min-height: 32px;
