--- a/PlanIt/src/assets/cmps/_PopOver.scss
+++ b/PlanIt/src/assets/cmps/_PopOver.scss
@@ -96,11 +96,8 @@
       li {
         button {
           display: flex;
-          flex-direction: row;
           align-items: center;
-          width: 100%;
           justify-content: flex-start;
-          flex: 1;
           height: 40px;
           margin: 0;
           padding: 4px 8px 4px 4px;
@@ -110,7 +107,7 @@
           }
 
           .remove-user {
-            justify-content: right;
+            margin-left: auto;
           }
         }
       }
