--- a/PlanIt/src/assets/cmps/_BoardIndex.scss
+++ b/PlanIt/src/assets/cmps/_BoardIndex.scss
@@ -167,6 +167,11 @@
           .star:not(.star-filled) {
             transform: translateX(-30px);
           }
+
+          .dark-theme {
+            background-color: #a1a1a1;
+            z-index: 100;
+          }
         }
 
         .board-name {
@@ -211,23 +216,6 @@
             padding: 3px 0px 0px 5px;
           }
         }
-
-        &:nth-child(1) {
-          background: linear-gradient(to right, #ff7e5f, #feb47b);
-        }
-
-        &:nth-child(2) {
-          background: linear-gradient(to right, #00c6ff, #0072ff);
-        }
-
-        &:nth-child(3) {
-          background: linear-gradient(to right, #8e2de2, #4a00e0);
-        }
-
-        &:nth-child(4) {
-          background: linear-gradient(to right, #11998e, #38ef7d);
-        }
-
 
       }
     }
