--- a/PlanIt/src/assets/cmps/_BoardList.scss
+++ b/PlanIt/src/assets/cmps/_BoardList.scss
@@ -36,7 +36,7 @@
   .group-card {
     display: flex;
     flex-direction: column;
-    width: 272px;
+    min-width: 272px;
     max-height: 100%;
     border-radius: 12px;
     padding: 6px 8px 6px 6px;
