Add group color cmp

--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -26,6 +26,7 @@
 @import './cmps/PopOver.scss';
 @import './cmps/_PopOverCheckList.scss';
 @import './cmps/PopOverLabels.scss';
+@import './cmps/GroupMenuDropDown.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
