--- a/PlanIt/src/assets/cmps/_BoardList.scss
+++ b/PlanIt/src/assets/cmps/_BoardList.scss
@@ -178,21 +178,19 @@
   height: 100%;
 }
 
-
-
 /* Responsive Styles */
-@media (max-width: 900px) {
-  .board-container {
-    height: auto;
-    padding: 0;
-  }
+// @media (max-width: 900px) {
+//   .board-container {
+//     height: auto;
+//     padding: 0;
+//   }
 
-  .board-card {
-    width: 100%;
-    margin-bottom: 10px;
-  }
+//   .board-card {
+//     width: 100%;
+//     margin-bottom: 10px;
+//   }
 
-  .board-title {
-    font-size: 16px;
-  }
-}
+//   .board-title {
+//     font-size: 16px;
+//   }
+// }
