--- a/PlanIt/src/assets/cmps/_GroupMenu.scss
+++ b/PlanIt/src/assets/cmps/_GroupMenu.scss
@@ -3,7 +3,7 @@
     align-items: center;
     margin-left: auto;
     position: relative;
-    
+
 
     .menu-btn {
         width: 32px;
@@ -28,14 +28,15 @@
 
     .menu-dropdown {
         position: absolute;
-        top: 100%;
+        top: 130%;
         left: 0;
         background-color: white;
         border: 1px solid #ccc;
-        border-radius: 4px;
+        border-radius: 8px;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
         padding: 8px 0;
-        min-width: 120px;
+        min-width: 300px;
+        font-size: 14px;
 
         button {
             display: block;
@@ -43,6 +44,7 @@
             padding: 8px 12px;
             background: none;
             border: none;
+            color: #172b4dd6;
             text-align: left;
             font-size: 14px;
             cursor: pointer;
